manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webproject
  namespace: myweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webproject
  template:
    metadata:
      labels:
        app: webproject
    spec:
      containers:
        - name: webproject
          image: mb2821/webproject:latest
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /web
              port: 5000
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /web
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 20
          volumeMounts:
            - name: image-cache
              mountPath: /usr/src/app/cache
            - name: secret-volume
              mountPath: /usr/src/app/secret
              readOnly: true
      volumes:
        - name: image-cache
          persistentVolumeClaim:
            claimName: image-pvc
        - name: secret-volume
          secret:
            secretName: my-secret
