manifests/webproject-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webproject-stateful
  namespace: myweb
spec:
  serviceName: "webproject-headless"
  replicas: 1
  selector:
    matchLabels:
      app: webproject
  template:
    metadata:
      labels:
        app: webproject
    spec:
      containers:
        - name: webproject
          image: mb2821/webproject:latest
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: image-cache
              mountPath: /usr/src/app/cache
            - name: secret-volume
              mountPath: /usr/src/app/secret
              readOnly: true
      volumes:
        - name: secret-volume
          secret:
            secretName: my-secret
  volumeClaimTemplates:
    - metadata:
        name: image-cache
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
