manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webproject-svc
  namespace: myweb
spec:
  type: ClusterIP
  selector:
    app: webproject
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 5000
