manifests/webproject-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webproject-headless
  namespace: myweb
spec:
  clusterIP: None
  selector:
    app: webproject
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 5000
