manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webproject-ingress
  namespace: myweb
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /web
            pathType: Prefix
            backend:
              service:
                name: webproject-svc
                port:
                  number: 1234
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: todo-backend-svc
                port:
                  number: 1234
